Fix errors in Cashu token redemption implementation
- Add missing imports in service classes
- Fix parameter types with proper KeysetId
- Cast ISecret to StringSecret for type handling